[gd_scene load_steps=22 format=2]

[ext_resource path="res://entities/eye creature/skull/Skull.gd" type="Script" id=1]
[ext_resource path="res://entities/eye creature/assets/skull/frame0000.png" type="Texture" id=2]
[ext_resource path="res://entities/eye creature/assets/skull/frame0001.png" type="Texture" id=3]
[ext_resource path="res://entities/eye creature/assets/skull/frame0002.png" type="Texture" id=4]
[ext_resource path="res://entities/eye creature/assets/skull/frame0003.png" type="Texture" id=5]
[ext_resource path="res://entities/eye creature/assets/skull/frame0004.png" type="Texture" id=6]
[ext_resource path="res://entities/eye creature/assets/skull/frame0005.png" type="Texture" id=7]
[ext_resource path="res://entities/eye creature/assets/skull/frame0006.png" type="Texture" id=8]
[ext_resource path="res://entities/eye creature/assets/skull/frame0007.png" type="Texture" id=9]
[ext_resource path="res://entities/eye creature/assets/skull/frame0008.png" type="Texture" id=10]
[ext_resource path="res://entities/eye creature/assets/skull/frame0009.png" type="Texture" id=11]
[ext_resource path="res://entities/eye creature/assets/skull/frame0010.png" type="Texture" id=12]
[ext_resource path="res://entities/eye creature/assets/skull/frame0011.png" type="Texture" id=13]
[ext_resource path="res://entities/eye creature/assets/skull/frame0012.png" type="Texture" id=14]
[ext_resource path="res://entities/eye creature/assets/skull/frame0013.png" type="Texture" id=15]
[ext_resource path="res://entities/eye creature/assets/skull/frame0014.png" type="Texture" id=16]
[ext_resource path="res://entities/eye creature/assets/skull/frame0015.png" type="Texture" id=17]
[ext_resource path="res://ui/popupDialog/PopupDialog.tscn" type="PackedScene" id=18]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ) ],
"loop": true,
"name": "Idle",
"speed": 10.0
} ]

[sub_resource type="CircleShape2D" id=2]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 40.5105, 201.428 )

[node name="Skull" type="Node2D"]
script = ExtResource( 1 )

[node name="KinematicBody2D" type="KinematicBody2D" parent="."]
editor/display_folded = true

[node name="AnimatedSprite" type="AnimatedSprite" parent="KinematicBody2D"]
frames = SubResource( 1 )
animation = "Idle"
frame = 13
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="KinematicBody2D"]
shape = SubResource( 2 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 3 )

[node name="PopupDialog" parent="." instance=ExtResource( 18 )]

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="pressed" from="PopupDialog/PopupDialog/PanelContainer/MarginContainer/HBoxContainer/NextButton" to="." method="_on_NextButton_pressed"]

[editable path="PopupDialog"]
